--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
+    "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "firebase": "^9.18.0",
+    "firebase-admin": "^11.6.0",
+    "next": "^13.2.4",
     "nodemon": "^2.0.22",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-google-button": "^0.7.2",
+    "react-router-dom": "^5.3.0",
+    "react-toastify": "^9.1.2",
+    "sass": "^1.62.0"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
