--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.3.0",
     "react-toastify": "^9.1.2",
     "sass": "^1.62.0",
+    "sweetalert2": "^11.7.3",
     "zustand": "^4.3.7"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
