--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.2.4",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.6.0",
+    "js-cookie": "^3.0.5",
     "next": "^13.2.4",
     "nodemon": "^2.0.22",
     "react": "18.2.0",
