--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "file-saver": "^2.0.5",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.6.0",
     "next": "^13.3.1",
     "nodemon": "^2.0.22",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
     "react-google-button": "^0.7.2",
     "react-router-dom": "^5.3.0",
