--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.6.0",
+    "js-cookie": "^3.0.5",
     "next": "^13.3.1",
     "nodemon": "^2.0.22",
     "papaparse": "^5.4.1",
