--- a/package.json
+++ b/package.json
@@ -19,12 +19,9 @@
     "eslint-config-next": "13.2.4",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.6.0",
-<<<<<<< HEAD
     "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
     "next": "^13.2.4",
-=======
-    "next": "^13.3.1",
->>>>>>> 515027b4a2267d3e9ef685fa4c41e77a8688e7b4
     "nodemon": "^2.0.22",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -34,7 +31,7 @@
     "react-toastify": "^9.1.2",
     "sass": "^1.62.0",
     "sweetalert2": "^11.7.3",
-    "zustand": "^4.3.7"
+    "zustand": "^4.3.8"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
