--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "firebase": "^9.18.0",
+    "file-saver": "^2.0.5",
+    "firebase": "^9.22.0",
     "firebase-admin": "^11.6.0",
-<<<<<<< HEAD
     "js-cookie": "^3.0.5",
+    "moment-timezone": "^0.5.43",
     "next": "^13.2.4",
-=======
-    "next": "^13.3.1",
->>>>>>> 515027b4a2267d3e9ef685fa4c41e77a8688e7b4
     "nodemon": "^2.0.22",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
