--- a/package.json
+++ b/package.json
@@ -12,25 +12,33 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.14",
+    "@mui/lab": "^5.0.0-alpha.133",
+    "@mui/material": "^5.13.4",
+    "@mui/x-date-pickers": "^6.7.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.30.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "file-saver": "^2.0.5",
-    "firebase": "^9.22.0",
+    "firebase": "^9.22.1",
     "firebase-admin": "^11.6.0",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "moment-timezone": "^0.5.43",
     "next": "^13.2.4",
     "nodemon": "^2.0.22",
+    "npm": "^9.7.1",
     "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
     "react-google-button": "^0.7.2",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^5.3.0",
     "react-toastify": "^9.1.2",
+    "rsuite": "^5.35.1",
     "sass": "^1.62.0",
     "sweetalert2": "^11.7.3",
     "zustand": "^4.3.7"
