--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "nodemon": "^2.0.22",
     "npm": "^9.7.1",
     "papaparse": "^5.4.1",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-datepicker": "^4.12.0",
@@ -40,7 +40,8 @@
     "react-router-dom": "^5.3.0",
     "react-toastify": "^9.1.2",
     "rsuite": "^5.35.1",
-    "sass": "^1.86.0",
+    "sass": "^1.87.0",
+    "sharp": "^0.34.2",
     "sweetalert2": "^11.7.3",
     "zustand": "^4.3.7"
   },
